# lunchpad-website-refactor

./: .gitignore
backend/: database.db  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/Lunchpad/: conditioned_model.py
backend/Lunchpad/src/: data_loader.py  demo.ipynb  inv_cook.py  model.py  sample.py  train.py  util.py
backend/Lunchpad/src/modules/: multihead_attention.py  transformer_decoder.py
backend/Lunchpad/src/utils/: tb_visualizer.py
frontend/: package-lock.json  package.json
frontend/app/: next.config.js  package-lock.json  package.json
frontend/app/.next/: app-build-manifest.json  trace
frontend/app/.next/cache/webpack/client-development/: 0.pack  1.pack  (+21 more)
frontend/app/.next/cache/webpack/client-development-fallback/: 1.pack  index.pack  index.pack.old
frontend/app/.next/server/: client-reference-manifest.js  client-reference-manifest.json  next-font-manifest.js  next-font-manifest.json  webpack-runtime.js
frontend/app/.next/server/app/: page.js
frontend/app/.next/static/chunks/: app-client-internals.js  webpack.js
frontend/app/.next/static/development/: _buildManifest.js
frontend/app/.next/static/webpack/: 1f742adb478f3ed8.webpack.hot-update.json  webpack.08bbe3671c2a994f.hot-update.js  webpack.1f742adb478f3ed8.hot-update.js  webpack.9c8543e982bb4b39.hot-update.js
frontend/app/.next/types/app/: layout.ts  page.ts
frontend/app/app/: layout.tsx  page.tsx
frontend/app/app/components/: ModelInterface.jsx  Navbar.jsx  Output.jsx  Uploader.jsx
frontend/app/app/demo/: page.tsx
frontend/app/app/team/: page.tsx
(+30 files in other folders)
